DZ5/k8s/rvm-app/rvm-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rvm-app
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.auth-test.svc.cluster.local:4180/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-Email,X-Auth-Request-User"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/romanov($|/)(.*)
            backend:
              serviceName: rvm-dz1-service
              servicePort: 8000
